# graph-rag-benchmark

./: .gitignore  MLNW_prj.ipynb  README.md  graph_rag_evaluation.ipynb  pyproject.toml
output/: comprehensive_report_cora_facebook_sampled.json  evaluation_results_graph_sizes.json
src/: config.py  data_loading.py  evaluation.py  experiments.py  visualization.py
