[project]
name = "project"
version = "0.1.0"
description = ""
authors = [
    {name = "Team"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "ipykernel (>=7.2.0,<8.0.0)",
    "jupyterlab (>=4.5.6,<5.0.0)",
    "requests (>=2.33.1,<3.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "pandas (>=3.0.2,<4.0.0)",
    "networkx (>=3.6.1,<4.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
